feat(phase1): manifesto of the tools is more or less assembled